<resources>
    <string name="app_name">Weather Forecast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_screen">Home</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="home_menu">Home</string>
    <string name="OPEN_navigation">OPEN Navigation</string>
    <string name="Close_navigation">Close Navigation</string>
    <string name="temperature_setting">Temperature</string>
    <string name="alert_list">Alert</string>
    <string name="settings">Settings</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="launguage">Launguage</string>
    <string name="notification_setting">Notification</string>
    <string name="location">Location</string>
    <string name="not_netwark">There is no internet connection</string>
    <string name="favourite_screen">Favourite</string>
    <string name="add_favourite_list">+</string>
    <string name="save_favourite_list">Save</string>
    <string name="description_alert">DescriptionAlert</string>
    <string name="to_dialog_alarm">To</string>
    <string name="from_dialog_alarm">From</string>
    <string name="alert_save_time">SAVE</string>
    <string name="radio_notification">Notification</string>
    <string name="radio_alarm">Alarm.</string>
    <string name="channel_name">Weather Notification</string>
    <string name="channel_description">Alert Notification</string>
    <string name="alerts_notification">Alter and Notification</string>
    <string name="exit_app">Exit The App ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="dismiss">Dismiss</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="meter_sec">meter/sec</string>
    <string name="miles_hour">miles/hour</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="favourite_name_list">My Favourite</string>
    <string name="delete_item">Delete item</string>
    <string name="desc_delete">Are you sure you want to delete this item?</string>

</resources>